chore: progress update – backend and frontend enhancements